# kill-team-tracker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/agents/: packaging.agent.md  qa.agent.md  state.agent.md  supervisor.agent.md  ui.agent.md
.github/workflows/: ci.yml
agents/: qa.agent.md
app/: main.py
app/state/: __init__.py  history.py  models.py
app/storage/: adapter.py
app/ui/: __init__.py  flow.py  main_screen.py  player_palette.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HANDOFF_TEMPLATE.md  PRODUCT.md  TASK_TEMPLATE.md  USAGE.md  WORKFLOW.md
tasks/: TASKS.md
tests/: __init__.py  conftest.py  test_basic.py  test_e2e_persistence.py  test_game_state.py  test_match_history_state.py  test_pytest_automation_baseline.py  test_save_load_integration.py  test_storage_adapter.py  test_ui_main_screen.py  test_ui_smoke.py
